# xsd-rs

./: .gitignore  Cargo.toml  README.md  config.json  mapping.json  model.rs  sep.json  validate.py  xsd-model.rs
cli/: Cargo.toml
cli/src/: main.rs
model/: Cargo.toml
model/src/: config.rs  json.rs  lib.rs  map.rs  resolved.rs  resolver.rs  unresolved.rs
openadr/: Cargo.toml  config.json  validate.py  xsd_commands.txt
openadr/examples/: registrations.rs  samples.rs
openadr/samplexml/: create_party_registration.xml  created_party_registration.xml
openadr/src/: lib.rs
openadr/testxsd/: oadr_20b.xsd
openadr/xsd/: oadr_20b.xsd  oadr_ISO_ISO3AlphaCurrencyCode_20100407.xsd  oadr_ei_20b.xsd  oadr_xmldsig.xsd
parser/: Cargo.toml
parser/src/: lib.rs
parser/src/parser/: mod.rs
rs_xsd_gen/: Cargo.toml
rs_xsd_gen/snippets/: config.rs  error.rs  helpers.rs  read_helpers.rs  traits.rs  use_statements.rs  write_to_xml.rs
rs_xsd_gen/src/: config.rs  main.rs  traits.rs
rs_xsd_gen/src/parse/parser/: mod.rs
xsd-api/: Cargo.toml
xsd-api/src/: config.rs  error.rs
xsd-model/: Cargo.toml
xsd-model/src/: config.rs  lib.rs  map.rs  resolved.rs  resolver.rs
xsd-rs/: Cargo.toml
xsd-rs/snippets/: error.rs  helpers.rs  mod.rs  traits.rs  use_statements.rs
xsd-rs/src/: config.rs  main.rs  options.rs  traits.rs
xsd-rs/src/parse/: mod.rs
xsd-rs/src/parse/parser/: extension.rs  import.rs  list.rs  node_parser.rs  schema.rs  sequence.rs  tests.rs  types.rs  utils.rs  xsd_elements.rs
xsd-util/: Cargo.toml
xsd_transform/: Cargo.toml
(+497 files in other folders)
