[package]
name = "xsd-parser"
version = "0.1.0"
authors = [
    "Chris Bruce <chris@lumeo.com>",
    "leonid.krutovsky <leonid.krutovsky@quantumsoft.ru>",
    "DmitrySamoylov <dmitry.samoylov@quantumsoft.ru>",
    "victor-soloviev <victor.soloviev@quantumsoft.ru>",
    "Adam Crain <adam@stepfunc.io>",
]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
roxmltree = "0.14.0"
