[package]
name = "rs-xsd-gen"
version = "0.1.0"
authors = ["Adam Crain <adam@stepfunc.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
xml-model = { path = "../model" }
structopt = { version = "0.3" }
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
heck = "0.4.0"
indent_write = "2.2.0"

