[package]
name = "xsd-rs"
version = "0.1.0"
authors = ["Adam Crain <adam@stepfunc.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
xml-model = { path = "../model" }
clap = { version = "4.0.18", features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
heck = "0.4.0"
indent_write = "2.2.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

